# kluisz-ai-canvas

./: .dockerignore  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  Makefile.frontend  README.md  RELEASE.md  SECURITY.md  SIMPLIFIED_BUILD_GUIDE.md  codecov.yml  package-lock.json  pyproject.toml  render.yaml
.claude/: settings.local.json
deploy/: README.md  docker-compose.yml
docker/: .dockerignore  build_and_push.Dockerfile  build_and_push_backend.Dockerfile  build_and_push_backend_optimized.Dockerfile  build_and_push_base.Dockerfile  build_and_push_ep.Dockerfile  build_and_push_optimized.Dockerfile  build_and_push_with_extras.Dockerfile  build_backend_direct.Dockerfile  build_frontend_direct.Dockerfile  cdk-docker-compose.yml  container-cmd-cdk.sh  dev.docker-compose.yml  render.Dockerfile  render.pre-release.Dockerfile
docker/frontend/: build_and_push_frontend.Dockerfile  default.conf.template  start-nginx.sh
docker_example/: Dockerfile  README.md  docker-compose.yml  pre.Dockerfile  pre.docker-compose.yml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/dev/langfuse-observability/: README.md  analytics-service.md  frontend-dashboards-plan.md  implementation.md  langfuse-tracer-enhancement.md  pricing-engine.md
docs/dev/licensing-credits/: business_logic.md  complete_erd.md  readme.md
docs/dev/tenant-features/: README.md  architecture.md  backend_service.md  erd-critical-analysis.md  erd.md  extensibility-guide.md  frontend_gates.md  implementation-audit.md  implementation_plan.md  optimization-implementation.md  super_admin_ui.md  tenant-integration-config.md
docs/docs/Contributing/: contributing-community.mdx
docs/docs/Deployment/: deployment-docker.mdx  deployment-gcp.mdx  deployment-kubernetes-dev.mdx
docs/docs/Get-Started/: about-langflow.mdx  get-started-installation.mdx
docs/docs/Support/: luna-for-langflow.mdx  troubleshooting.mdx
docs/guides/: adding-custom-bundles.md  bundle-implementation-locations.md  contributing-components.md  feature-control-system.md
docs/src/theme/: Footer.js
kluisz-ai-chart/: .helmignore  Chart.yaml  DEPLOYMENT_GUIDE.md  README.md  values.yaml
kluisz-ai-chart/examples/: README.md  values-development.yaml  values-external-db.yaml  values-high-availability.yaml  values-production.yaml
kluisz-ai-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
scripts/: build_component_index.py  generate_coverage_config.py  release-lfx.sh  test_with_database.py
scripts/ci/: update_starter_projects.py
src/backend/base/: pyproject.toml
src/backend/base/kluisz/: __init__.py  __main__.py  kluisz_launcher.py  main.py  memory.py  middleware.py  server.py  settings.py  worker.py
src/backend/base/kluisz/alembic/: env.py
src/backend/base/kluisz/api/: __init__.py  build.py  health_check_router.py  limited_background_tasks.py  log_router.py  router.py
src/backend/base/kluisz/base/: __init__.py
src/backend/base/kluisz/cli/: progress.py
src/backend/base/kluisz/components/: __init__.py
src/backend/base/kluisz/config/: pricing.json
src/backend/base/kluisz/core/: celery_app.py  celeryconfig.py
src/backend/base/kluisz/custom/: __init__.py  utils.py  validate.py
src/backend/base/kluisz/events/: event_manager.py
src/backend/base/kluisz/exceptions/: api.py  component.py
src/backend/base/kluisz/field_typing/: __init__.py  constants.py  range_spec.py
src/backend/base/kluisz/frontend/: index.html
src/backend/base/kluisz/graph/: __init__.py
src/backend/base/kluisz/helpers/: data.py  flow.py  (+2 more)
src/backend/langflow/version/: version.py
src/backend/tests/: base.py  conftest.py  test_messages.py
src/backend/tests/data/: component.py  component_multiple_outputs.py  component_nested_call.py  component_with_templatefield.py  dynamic_output_component.py  simple_agent.py
src/backend/tests/integration/: test_exception_telemetry.py  test_misc.py  test_openai_responses_extended.py  test_openai_responses_integration.py  test_openai_streaming_comparison.py  utils.py
src/backend/tests/performance/: test_server_init.py
src/backend/tests/unit/: build_utils.py  test_async_helpers.py  test_auth_settings.py  test_build_timer.py  test_chat_endpoint.py  test_cli.py  test_custom_component.py  test_custom_component_with_client.py  test_database.py  test_endpoints.py  test_experimental_components.py  test_frontend_nodes.py  test_helper_components.py  test_langflow_logging_compatibility.py  test_lfx_reexport_modules.py  test_load_components.py  test_loading.py  test_logger.py  test_login.py  test_messages_endpoints.py  test_security_cors.py  test_session_endpoint.py  test_settings_initialization_order.py  test_setup_superuser.py  test_setup_superuser_flow.py  test_simple_agent_in_lfx_run.py  test_template.py  test_user.py
src/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  run-tests.sh  tsconfig.json  vite.config.mts
src/frontend/public/: manifest.json
src/frontend/src/: flow_constants.tsx  routes.tsx  vite-env.d.ts
src/frontend/src/constants/: alerts_constants.tsx  constants.ts  feature-maps.ts
src/frontend/src/contexts/: authContext.tsx  featureContext.tsx  index.tsx
src/frontend/src/customization/: config-constants.ts  constants.ts  feature-flags.ts
src/frontend/src/stores/: authStore.ts  darkStore.ts  flowStore.ts  messagesStore.ts  shortcuts.ts  storeStore.ts  typesStore.ts
src/frontend/src/style/: applies.css  classes.css
src/frontend/src/utils/: buildUtils.ts  cookie-manager.ts  feature-enrichment.ts  reactflowUtils.ts
src/frontend/tests/: custom_component_full.ts
src/frontend/tests/assets/: flow_test_drag_and_drop.json  flowtest.json  outdated_flow.json
src/frontend/tests/utils/: add-flow-to-test-on-empty-kluisz.ts  add-new-user-and-loggin.ts  auth-helpers.ts  await-bootstrap-test.ts  login-kluisz.ts
src/klx/: README.md  pyproject.toml
src/klx/src/klx/: __main__.py  settings.py
src/lfx/: README.md  pyproject.toml
(+4778 files in other folders)
